# wallet-core

./: .gitignore  CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
.github/workflows/: openplatform-jni.yml
open-platform/: README.md
open-platform/core-cpp/: CMakeCache.txt  CMakeLists.txt  HDWallet.c  Makefile  build  cmake_install.cmake  header.hpp  open.cpp  open.h  sample.cpp  test.cpp
open-platform/core-cpp/cryptocpp/cryptopp/: main.cpp
open-platform/example/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  test  test.cpp
open-platform/java/: Aes.cpp  CMakeLists.txt  HDWallet.cpp  README.MD  TrustWallet.cpp  build-lib.sh
open-platform/java/java/: io_openfuture_api_jni_Aes.h  io_openfuture_trustwallet_HDWallet.h
open-platform/java/java/io/openfuture/api/jni/: Aes.java
open-platform/java/java/io/openfuture/wallet/jni/: Aes.java  TrustWallet.java
open-platform/php/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  test.php  walletgenerate.cpp  walletgenerate.php
open-platform/php/lib/: OPEN.php  test.php
open-platform/php/php-cpp/: libphpcpp.so.2.3.0
open-platform/php/php-cpp/shared/common/: streambuf.d
open-platform/php/php-cpp/shared/zend/: base.d  callable.d  classbase.d  classimpl.d  constant.d  constantfuncs.d  error.d  exception_handler.d  exists.d  extension.d  extensionimpl.d  file.d  functor.d  global.d  globals.d  ini.d  inivalue.d  members.d  namespace.d  object.d  sapi.d  script.d  stream.d  streambuf.d  streams.d  throwable.d  value.d  valueiterator.d  zval.d
open-platform/php/php-cpp/static/common/: modifiers.d  streambuf.d
open-platform/php/php-cpp/static/zend/: base.d  callable.d  classbase.d  classimpl.d  constant.d  constantfuncs.d  error.d  eval.d  exception.d  exception_handler.d  exists.d  extension.d  extensionimpl.d  file.d  function.d  functor.d  global.d  globals.d  hashmember.d  ini.d  inivalue.d  iteratorimpl.d  members.d  module.d  namespace.d  object.d  sapi.d  script.d  stream.d  streambuf.d  streams.d  super.d  throwable.d  value.d  valueiterator.d  zendcallable.d  zval.d
open-platform/php/shared/common/: modifiers.d
open-platform/php/shared/zend/: eval.d  exception.d  function.d  hashmember.d  iteratorimpl.d  module.d  super.d  zendcallable.d
open-platform/test/: CMakeCache.txt  CMakeLists.txt  Makefile  OpenTests.cpp  cmake_install.cmake
openplatform/: CMakeLists.txt  HDWallet.cpp  README.MD
openplatform/java/io/openfuture/trustwallet/: HDWallet.java
samples/cpp/: sample.cpp
samples/php/: 30-walletgenerate.ini  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  walletgenerate.cpp  walletgenerate.php
samples/private/: CMakeCache.txt  Makefile  cmake_install.cmake  sample.cpp
tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
tests/Aeternity/: SignerTests.cpp
tests/googletest-build/: CTestTestfile.cmake  Makefile  cmake_install.cmake
tests/googletest-build/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
tests/googletest-build/googletest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
tools/: jni-build
trezor-crypto/: Makefile  cmake_install.cmake
trezor-crypto/crypto/tests/: CTestTestfile.cmake  Makefile  TrezorCryptoTests  cmake_install.cmake
walletconsole/: Makefile  cmake_install.cmake
walletconsole/lib/: Makefile  cmake_install.cmake
